fixed minor html mistakes, working on mobile version

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,20 +1,24 @@
 body{
     background-color:#FFFFFF;
-    overflow:hidden;
+    /* overflow:hidden; */
     font-family: sans-serif;
     font-size:15px;
 }
 footer{
     color:rgb(115, 115, 115);
     text-align: center;
+    align-self:flex-end;
 }
 footer ul{
     list-style: none;
     display:flex;
-    justify-content: space-between;
     text-align:center;
     font-size:13px;
     font-weight: 400;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-content: space-between; 
+    
 }
 footer ul li a{
     text-decoration: none;
@@ -114,4 +118,20 @@ h4{
 }
 fieldset{
     border:1px solid #b3bcc9;
+}
+.newuser{
+    border:1px solid #b3bcc9;
+    padding:1em;
+}
+@media(max-width:875px){
+    .instagram-demo{
+        position:absolute;
+        display:none;
+    }
+    .info{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+
+    }
 }
